--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Colyseus + Babylon.js Demo</title>
+    <link href="https://fonts.cdnfonts.com/css/trajan-pro" rel="stylesheet">
     <style>
-        html,body {overflow: hidden;width: 100%;height: 100%;margin: 0;padding: 0;}
-        #renderCanvas {width: 100%;height: 100%;touch-action: none;}
+        html,body {font-family: "Trajan Pro";overflow: hidden;width: 100%;height: 100%;margin: 0;padding: 0;}
+        #renderCanvas {font-family:"Trajan Pro";width: 100%;height: 100%;touch-action: none;}
     </style>
 </head>
 <body>
