--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Colyseus + Babylon.js Demo</title>
-    <link href="https://fonts.cdnfonts.com/css/trajan-pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <style>
-        html,body {font-family: "Trajan Pro";overflow: hidden;width: 100%;height: 100%;margin: 0;padding: 0;}
-        #renderCanvas {font-family:"Trajan Pro";width: 100%;height: 100%;touch-action: none;}
+        html,body {font-family: Roboto, sans-serif;overflow: hidden;width: 100%;height: 100%;margin: 0;padding: 0;}
+        #renderCanvas {font-family:Roboto, sans-serif;width: 100%;height: 100%;touch-action: none;}
     </style>
 </head>
 <body>
     <canvas id="renderCanvas" touch-action="none"></canvas>
-    <script src="./dist/app.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
